--- a/ansible/inventories/staging/group_vars/all/vars.yaml
+++ b/ansible/inventories/staging/group_vars/all/vars.yaml
@@ -22,13 +22,14 @@ admin_users:
   - name: "{{ vault_dungnm_name }}"
     passwd: "{{ vault_dungnm_passwd }}"
     full_name: "{{ vault_dungnm_full_name }}"
+    active: 1
 
 admin_group: "{{ vault_admin_group }}"
 admin_sudo_file: /etc/sudoers.d/admins
 admin_cmd_alias: |
   Cmnd_Alias  SHUTDOWN = /sbin/halt, /sbin/shutdown, /sbin/poweroff, /sbin/reboot, /sbin/init, /sbin/telinit
   Cmnd_Alias  SHELLS = /bin/sh, /bin/bash, /sbin/nologin, /bin/tcsh, /bin/csh, /bin/zsh, /bin/ksh
-  Cmnd_Alias  SU = /bin/su 
+  Cmnd_Alias  SU = /bin/su
   Cmnd_Alias  NDD = /bin/dd
 admin_cmd: ALL=(ALL) ALL, !SHELLS, !SU, !SHUTDOWN, !NDD
 
