--- a/ansible/inventories/staging/group_vars/test_mysqld/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_mysqld/vars.yaml
@@ -22,7 +22,7 @@ mysqld_symbolic_links: 0
 
 ### InnoDB ###
 mysqld_default_storage_engine: InnoDB
-mysqld_innodb_buffer_pool_size: 2048M
+mysqld_innodb_buffer_pool_size: 1024M
 mysqld_innodb_buffer_pool_instances: 1
 mysqld_innodb_autoinc_lock_mode: 2
 mysqld_innodb_doublewrite: 1
@@ -36,7 +36,7 @@ mysqld_innodb_file_per_table: 1
 mysqld_max_allowed_packet: 32M
 
 ### Open cache ###
-mysqld_table_open_cache: 1000
+mysqld_open_cache: 1000
 
 ### query cache ###
 mysqld_query_cache_size: 0
@@ -69,7 +69,7 @@ mysqld_innodb_log_file_size: 64M
 
 ### my_enable_replication: 0|1
 ### my_enable_gtid: 0|1
-mysqld_report_host: NA
+mysqld_report_host: example
 mysqld_report_port: "{{ mysqld_port }}"
 mysqld_expire_logs_days: 5
 mysqld_server_id: NA
@@ -90,5 +90,5 @@ mysqld_root_priv: "{{ vault_mysqld_default_root_priv }}"
 
 ### Control param
 my_enable_thread_cache: 1
-my_enable_replication: 0
+my_enable_replication: 1
 my_enable_gtid: 0
