--- a/ansible/playbooks/staging/example_mariadb_replication.yaml
+++ b/ansible/playbooks/staging/example_mariadb_replication.yaml
@@ -1,5 +1,5 @@
 - name: Deploy mariadb
-  hosts: example_mariadb
+  hosts: example_mariadb_replication
   roles:
   - role: common
   - role: mariadb
