--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -1,5 +1,6 @@
 - include: basic.yaml
 - include: install_packages.yaml
+- include: ntpd.yaml
 - include: accounts.yaml
 - include: secure.yaml
 - include: fix_e1000e.yaml
