--- a/ansible/inventories/staging/group_vars/example_mariadb_replication/vars.yaml
+++ b/ansible/inventories/staging/group_vars/example_mariadb_replication/vars.yaml
@@ -1,121 +1,2 @@
-# Change it if you need
-mariadb_base_version: "10.1"
-# Change it if you need
-mariadb_version: "10.1.22"
-
-mariadb_datadir: /var/lib/mysql
-mariadb_datadir_base: /data
-mariadb_datadir_origin: "{{ mariadb_datadir_base }}/mysql_datadir"
-mariadb_logdir: /var/log/mysqld
-mariadb_tmpdir: "{{ mariadb_logdir }}/tmp"
-mariadb_log_error: "{{ mariadb_logdir }}/mysql_error.log"
-mariadb_slow_query_log_file: "{{ mariadb_logdir }}/mysql_slow.log"
-mariadb_general_log_file: "{{ mariadb_logdir }}/mysql_general.log"
-
-mariadb_user: mysql
-mariadb_group: mysql
-mariadb_port: 3306
-mariadb_bind_address: 0.0.0.0
-mariadb_socket: "{{ mariadb_datadir }}/mysql.sock"
-mariadb_skip_name_resolve: 1
-
-mariadb_default_storage_engine: InnoDB
-# Change it if you need
-mariadb_innodb_buffer_pool_size: 2048M
-# Change it if you need
-mariadb_innodb_buffer_pool_instances: 1
-mariadb_innodb_autoinc_lock_mode: 2
-mariadb_innodb_doublewrite: 1
-mariadb_innodb_flush_log_at_trx_commit: 1
-mariadb_innodb_flush_method: O_DIRECT
-# Change it if you need
-mariadb_innodb_log_buffer_size: 16M
-
-mariadb_innodb_file_per_table: 1
-
-### packet size ###
-# Change it if you need
-mariadb_max_allowed_packet: 32M
-
-### Open cache ###
-# Change it if you need
-mariadb_table_open_cache: 1000
-
-### query cache ###
-mariadb_query_cache_size: 0
-mariadb_query_cache_type: 0
-
-### ma_enable_thread_cache: 0|1
-# Change it if you need
-mariadb_thread_cache_size: 4
-# Change it if you need
-mariadb_max_connections: 64
-
-### Timeout ###
-mariadb_wait_timeout: 30
-mariadb_interactive_timeout: 30
-mariadb_connect_timeout: 30
-
-### Temporary ###
-# Change it if you need
-mariadb_tmp_table_size: 64M
-mariadb_max_heap_table_size: 64M
-
-### Log ###
-mariadb_log_output: FILE
-mariadb_log_queries_not_using_indexes: 0
-mariadb_log_warnings: 2
-mariadb_long_query_time: 2
-mariadb_general_log: 0
-mariadb_slow_query_log: 1
-
-### Redo log ###
-mariadb_innodb_log_files_in_group: 2
-mariadb_innodb_log_file_size: 64M
-
-### ma_enable_thread_pool: 0|1
-mariadb_thread_handling: pool-of-threads
-# Change it if you need
-mariadb_thread_pool_size: 4
-mariadb_extra_port: 6033
-mariadb_extra_max_connections: 10
-
-### ma_enable_replication: 0|1
-### ma_enable_gtid: 0|1
-# Change it if you need
-mariadb_gtid_domain_id: NA
-mariadb_report_host: "{{ ansible_host }}"
-mariadb_report_port: "{{ mariadb_port }}"
-# Change it if you need
-project_name: example
-mariadb_expire_logs_days: 5
-# Change it if you need
-mariadb_server_id: NA
-mariadb_max_binlog_size: 200M
-mariadb_log_slave_updates: 1
-#mariadb_binlog_format: ROW or MIXED
-mariadb_binlog_format: ROW
-
-xtrabackup_streamfmt: xbstream
-
-sysctl_vm_swappiness: 10
-
-### vault
-# Change it if you need. You need vault.yaml in group_vars.
-# Change default to service name or project name
-mariadb_root_name: root
-mariadb_root_passwd: "{{ vault_mariadb_default_root_passwd }}"
-mariadb_root_priv: "*.*:ALL,GRANT"
-
-mariadb_repl_user_name: repl_user
-mariadb_repl_user_passwd: "{{ vault_mariadb_default_repl_user_passwd }}"
-mariadb_repl_user_priv: "*.*:REPLICATION SLAVE"
-
-### Control param
-# Change it if you need
-ma_enable_thread_cache: 0
-ma_enable_thread_pool: 1
-ma_enable_replication: 1
-mysql_repl_role: NA
-mysql_repl_master: NA
-ma_enable_gtid: 0
+- include: mariadb.yaml
+- include: monitoring.yaml
