--- a/ansible/roles/common/tasks/ntpd.yaml
+++ b/ansible/roles/common/tasks/ntpd.yaml
@@ -1,4 +1,4 @@
 - name: Install ntpd
-  yum: name="ntpd" update_cache=yes
+  yum: name="ntp" update_cache=yes
 - name: Restart and enable ntpd
   service: name="ntpd" enabled=yes state=restarted
