--- a/ansible/roles/monitoring/tasks/main.yaml
+++ b/ansible/roles/monitoring/tasks/main.yaml
@@ -4,8 +4,8 @@
 
 - name: Create the checker users
   mysql_user:
-    login_user: "{{ mariadb_root_name }}"
-    login_port: "{{ mariadb_port }}"
+    login_user: root
+    login_port: "{{ mysql_port }}"
     login_password: "{{ mariadb_root_passwd }}"
     name: haproxyUser
     host: localhost
