--- a/ansible/roles/backup/defaults/main.yaml
+++ b/ansible/roles/backup/defaults/main.yaml
@@ -1,12 +1,14 @@
-default_mysqld_root_passwd: "{{ vault_mysqld_root_passwd }}"
-default_backup_port: 3306
-default_backup_name: NA
-default_backup_table_engine: innodb
-default_backup_use_galera: "true"
-
+backup_name: NA
+bacula_org: NA
+table_engine: innodb
+use_galera: "true"
+email_list: "{{ vault_notify_email_list }}"
+mail_sender: "localhost@{{ bacula_org }}.com"
 is_backup: 0
-backup_method: NA
-
-default_bacula_fd_name: NA
-default_bacula_server_ip: NA
-
+bacula_dir_name: "{{ bacula_org }}-backup-dir"
+bacula_dir_passwd: "{{ vault_bacula_dir_passwd }}"
+bacula_mon_name: "{{ bacula_org }}-backup-mon"
+bacula_mon_passwd: "{{ vault_bacula_mon_passwd }}"
+bacula_fd_name: "{{ backup_name }}-backup-fd"
+bacula_server_ip: NA
+bacula_server_name: "backup.{{ bacula_org }}"
