--- a/ansible/roles/mariadb/tasks/main.yaml
+++ b/ansible/roles/mariadb/tasks/main.yaml
@@ -201,7 +201,7 @@
 - name: Set root passwd
   mysql_user:
     name: root
-    password: "{{ mariadb_root_passwd }}"
+    password: "{{ mysql_root_passwd }}"
     priv: "*.*:ALL,GRANT"
     state: present
     login_user: root
