--- a/ansible/roles/monitoring/tasks/main.yaml
+++ b/ansible/roles/monitoring/tasks/main.yaml
@@ -6,7 +6,7 @@
   mysql_user:
     login_user: root
     login_port: "{{ mysql_port }}"
-    login_password: "{{ mariadb_root_passwd }}"
+    login_password: "{{ mysql_root_passwd }}"
     name: haproxyUser
     host: localhost
     password: "{{ checker_passwd }}"
