--- a/ansible/roles/mariadb/tasks/main.yaml
+++ b/ansible/roles/mariadb/tasks/main.yaml
@@ -173,11 +173,7 @@
     state: present
 
 - name: Check if slave is already configured for replication
-  mysql_replication:
-    login_user: root
-    login_port: "{{ mysql_port }}"
-    login_password: ''
-    mode: getslave
+  mysql_replication: mode=getslave
   ignore_errors: true
   register: slave
   when: mysql_repl_role == 'slave'
