--- a/ansible/roles/mariadb/tasks/main.yaml
+++ b/ansible/roles/mariadb/tasks/main.yaml
@@ -178,18 +178,27 @@
   register: slave
   when: mysql_repl_role == 'slave'
 
-#- name: Print Slave Status
-#  debug: var=slave
+- name: Print Slave Status
+  debug: var=slave
+
+- name: Print Slave Status
+  debug: var=slave.Is_Slave
+
+- name: Print Slave Status
+  debug: var=mysql_repl_role
+
+- name: Print Slave Status
+  debug: var=mysql_repl_master
 
 - name: Ensure the hostname entry for master is available for the client.
   lineinfile: dest=/etc/hosts regexp="{{ mysql_repl_master }}" line="{{ hostvars[mysql_repl_master].ansible_default_ipv4.address + "   " + mysql_repl_master }}" state=present
-  when: slave.Is_Slave == false and mysql_repl_role == 'slave' and mysql_repl_master is defined
+  when: not slave.Is_Slave and mysql_repl_role == 'slave' and mysql_repl_master is defined
 
 - name: Get the current master servers replication status
   mysql_replication: mode=getmaster
   delegate_to: "{{ mysql_repl_master }}"
   register: repl_stat
-  when: slave.Is_Slave == false and mysql_repl_role == 'slave' and mysql_repl_master is defined
+  when: not slave.Is_Slave and mysql_repl_role == 'slave' and mysql_repl_master is defined
 
 - name: Change the master in slave to start the replication
   mysql_replication:
@@ -199,7 +208,7 @@
     master_log_pos: "{{ repl_stat.Position }}"
     master_user: repl_user
     master_password: "{{ mariadb_repl_user_passwd }}"
-  when: slave.Is_Slave == false and mysql_repl_role == 'slave' and mysql_repl_master is defined
+  when: not slave.Is_Slave and mysql_repl_role == 'slave' and mysql_repl_master is defined
 
 - name: Set root passwd
   mysql_user:
