--- a/ansible/roles/mariadb/defaults/main.yaml
+++ b/ansible/roles/mariadb/defaults/main.yaml
@@ -84,4 +84,5 @@ mariadb_repl_user_host: "%"
 ma_enable_thread_cache: 1
 ma_enable_thread_pool: 0
 mysql_repl_role: NA
+mysql_repl_master: NA
 ma_enable_gtid: 0
