--- a/ansible/roles/common/tasks/admin_accounts.yaml
+++ b/ansible/roles/common/tasks/admin_accounts.yaml
@@ -26,6 +26,14 @@
   when: item.active == 1
   with_items: "{{ admin_users }}"
 
+- name: Set authorized key took from file
+  authorized_key:
+    user: "{{ item.name }}"
+    state: present
+    key: "{{ item.public_key }}"
+  when: item.active == 1
+  with_items: "{{ admin_users }}"
+
 - name: Config basic vim
   copy: src=vimrc.conf.j2 dest="/home/{{ item.name }}/.vimrc"
   when: item.active == 1
@@ -35,3 +43,25 @@
   copy: src=tmux.conf.j2 dest="/home/{{ item.name }}/.tmux.conf"
   when: item.active == 1
   with_items: "{{ admin_users }}"
+
+- name: Check if filter user in sshd
+  command: grep -Fq "AllowUsers" /etc/ssh/sshd_config
+  register: check_sshd
+  ignore_errors: yes
+  changed_when: False
+  check_mode: no
+
+- name: Allow user in sshd
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    line: 'AllowUsers {{ item.name }}'
+    state: present
+    validate: '/usr/sbin/sshd -T -t -f %s'
+  when:
+    - item.active == 1
+    - check_sshd.rc == 0
+  with_items: "{{ admin_users }}"
+
+- name: Restart sshd to apply config
+  service: name="sshd" enabled=yes state=restarted
+  when: check_sshd.rc == 0
