--- a/ansible/inventories/hosts.yaml
+++ b/ansible/inventories/hosts.yaml
@@ -1,4 +1,8 @@
-[test]
+[development_test]
 test1 ansible_host=103.53.170.69 hostname=test1
-#test2 ansible_host=103.53.170.70 hostname=test2
-#test3 ansible_host=103.53.171.121 hostname=test3
+
+[staging_test]
+test2 ansible_host=103.53.170.70 hostname=test2
+
+[production_test]
+test3 ansible_host=103.53.171.121 hostname=test3
