--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -1,7 +1,7 @@
 - include: basic.yaml
 - include: install_packages.yaml
-- include: ntpd.yaml
+- include: secure.yaml
 - include: admin_accounts.yaml
 - include: dev_accounts.yaml
-- include: secure.yaml
+- include: root_account.yaml
 #- include: fix_e1000e.yaml
