--- a/ansible/roles/common/tasks/secure.yaml
+++ b/ansible/roles/common/tasks/secure.yaml
@@ -1,16 +1,14 @@
-- name: Change passwd root and enable root login console
-  user:
-    name: "{{ root_user.name }}"
-    password: "{{ root_user.recovery_passwd }}"
-    shell: /bin/bash
+- name: Disable selinux
+  selinux: state=disabled
 
-- name: Disallow root SSH access
-  lineinfile:
-    dest: /etc/ssh/sshd_config
-    regexp: "^PermitRootLogin"
-    line: "PermitRootLogin no"
-    state: present
-    validate: '/usr/sbin/sshd -T -t -f %s'
+- name: Disable firewall
+  service: name="firewalld" enabled=no state=stopped
+  when:
+    - ansible_distribution == "{{ distro_centos.name }}"
+    - ansible_distribution_major_version == "{{ distro_centos.version7 }}"
 
-- name: Restarted sshd
-  service: name="sshd" enabled=yes state=restarted
+- name: Disable firewall
+  service: name="iptables" enabled=no state=stopped
+  when:
+    - ansible_distribution == "{{ distro_centos.name }}"
+    - ansible_distribution_major_version == "{{ distro_centos.version6 }}"
