--- a/ansible/roles/gitlab/tasks/main.yaml
+++ b/ansible/roles/gitlab/tasks/main.yaml
@@ -6,5 +6,21 @@
   args:
     executable: /bin/bash
 
+- name: Has Allow user in sshd ?
+  shell: grep -q AllowUsers "{{ sshd_config }}"
+  register: has_allow_users
+  # grep will exit with 1 when no results found.
+  # This causes the task not to halt play.
+  ignore_errors: true
+
+- name: AllowUsers git in sshd
+  lineinfile:
+    dest: "{{ sshd_config }}"
+    state: present
+    line: "AllowUsers {{ git_user }}"
+    insertafter: EOF
+    validate: "/usr/sbin/sshd -t -f %s"
+  when: has_allow_users|succeeded
+
 - name: Show msg
   debug: msg="Access gitlab via url http://{{ ansible_host }} or http://{{ hostname }}"
