--- a/ansible/roles/gitlab/tasks/main.yaml
+++ b/ansible/roles/gitlab/tasks/main.yaml
@@ -21,6 +21,7 @@
     insertafter: EOF
     validate: "/usr/sbin/sshd -t -f %s"
   when: has_allow_users|succeeded
+  notify: restart sshd
 
 - name: Replace to port 22
   replace:
@@ -28,6 +29,7 @@
     regexp: 'Port\s+[0-9]+'
     replace: 'Port 22'
     validate: "/usr/sbin/sshd -t -f %s"
+  notify: restart sshd
 
 - name: Show msg
   debug: msg="Access gitlab via url http://{{ ansible_host }} or http://{{ hostname }}"
