--- a/ansible/roles/gitlab/tasks/main.yaml
+++ b/ansible/roles/gitlab/tasks/main.yaml
@@ -17,7 +17,7 @@
   lineinfile:
     dest: "{{ sshd_config }}"
     state: present
-    line: "AllowUsers {{ git_user }}"
+    line: "AllowGroups {{ git_group }}"
     insertafter: EOF
     validate: "/usr/sbin/sshd -t -f %s"
   when: has_allow_users|succeeded
