--- a/ansible/roles/sshd/tasks/main.yml
+++ b/ansible/roles/sshd/tasks/main.yml
@@ -6,6 +6,7 @@
   template: >
     src=sshd_config.j2
     dest={{ sshd_config_basedir }}/sshd_config
+    backup=yes
     validate="/usr/sbin/sshd -t -f %s"
   notify: restart sshd
   tags: configuration
