--- a/ansible/inventories/hosts.yaml
+++ b/ansible/inventories/hosts.yaml
@@ -1,5 +1,5 @@
 [development_test]
-test1 ansible_host=103.53.170.69 hostname=test1
+test1 ansible_host=103.53.170.69 hostname=test1 ansible_port=22
 
 [staging_test]
 test2 ansible_host=103.53.170.70 hostname=test2
